# dev-examples

./: .gitignore  CLAUDE.md  README.md  llm-gateway-openai-sdk.py  package-lock.json  package.json  requirements.txt  tool-calling.py
js/: embedding_example.js  llm_rest_api.js  (+1 more)
mesh-agents/BlockBeak-TelegramBot/: .env.example  .gitignore  README.md  XMTP_SETUP.md  env.example  main.py  main_xmtp.py  new_task.md  pyproject.toml  requirements.txt
mesh-agents/BlockBeak-TelegramBot/src/: __init__.py
mesh-agents/BlockBeak-TelegramBot/src/config/: __init__.py  agent_instructions.yaml  agent_instructions_deep.yaml  agent_instructions_normal.yaml  bankr_delegator_instructions.yaml  blockbeak_instructions.yaml  settings.py  triage_instructions.yaml
mesh-agents/BlockBeak-TelegramBot/src/core/: __init__.py  agent.py  orchestrator.py
mesh-agents/BlockBeak-TelegramBot/src/interfaces/: __init__.py
mesh-agents/BlockBeak-TelegramBot/src/interfaces/cli/: __init__.py  terminal.py
mesh-agents/BlockBeak-TelegramBot/src/interfaces/telegram/: __init__.py  bot.py
mesh-agents/BlockBeak-TelegramBot/src/interfaces/xmtp/: __init__.py  api.py
mesh-agents/BlockBeak-TelegramBot/src/scheduler/: __init__.py  scheduler.py
mesh-agents/BlockBeak-TelegramBot/src/storage/: __init__.py  subscriptions.py
mesh-agents/BlockBeak-TelegramBot/xmtp-gpt/: .env.example  README.md  index.ts  package-lock.json  package.json  tsconfig.json
mesh-agents/BlockBeak-TelegramBot/xmtp-gpt/helpers/: client.ts
mesh-agents/BlockBeak-TelegramBot/xmtp-gpt/scripts/: generateKeys.ts  revokeInstallations.ts
(+53 files in other folders)
